# server

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.yml
.github/workflows/: audit.yml  build.yml  grcov.yml  lints.yml
tavern_db/: Cargo.toml
tavern_db/src/: db_tables.sql  lib.rs
tavern_derive/: Cargo.toml
tavern_derive/src/: error.rs  fields.rs  lib.rs  literals.rs  structs.rs
tavern_pathfinder/: Cargo.toml
tavern_pathfinder/src/: character.rs  class.rs  effects.rs  feat.rs  item.rs  lib.rs  religion.rs  spell.rs  summary.rs
tavern_pathfinder/src/character/: mod.rs
tavern_pathfinder/src/class/: mod.rs
tavern_pathfinder/src/class/proficiencies/: mod.rs
tavern_pathfinder/src/effects/: mod.rs
tavern_pathfinder/src/feat/: mod.rs
tavern_pathfinder/src/item/: mod.rs
tavern_pathfinder/src/religion/: mod.rs
tavern_pathfinder/src/spell/: mod.rs
tavern_server/: Cargo.toml  Makefile  README.md  diesel.toml  schema.rs
tavern_server/migrations/2020-05-29-010809_initial_setup/: down.sql  up.sql
tavern_server/migrations/2020-05-29-215331_indexes/: down.sql  up.sql
tavern_server/migrations/2020-06-03-003629_item_equipment_trigger/: down.sql  up.sql
tavern_server/src/: api.rs  auth.rs  config.rs  db.rs  db_tables.sql  forms.rs  lib.rs  main.rs  schema.patch  schema.rs  status.rs  test.rs
tavern_server/src/pathfinder/: character.rs  class.rs  effects.rs  feat.rs  item.rs  mod.rs  religion.rs  spell.rs  summary.rs
tavern_server/tests/: auth.rs  db.rs  lib.rs
tavern_server/tests/auth/: mod.rs
tavern_server/tests/db/: mod.rs
tavern_server/tests/pathfinder/: race_subtype.rs
