[package]
name = "tavern_derive"
version = "0.1.0"
authors = ["Michael Bryant <shadow53@shadow53.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nightly = []

[dependencies]
async-trait = "0.1"
convert_case = "0.4"
futures = "0.3"
proc-macro2 = { version = "1.0", features = [ "nightly", "span-locations" ] }
quote = "1.0"
syn = { version = "1.0", features = [ "full", "extra-traits" ] }
tokio = { version = "0.2", features = [ "blocking", "macros", "stream", "sync" ] }

[lib]
proc-macro = true
