[package]
name = "tavern_pathfinder"
version = "0.1.0"
authors = [
    "Michael Bryant <shadow53@shadow53.com>",
    "Benjamin Croom <tauntalus@outlook.com>",
]
description = "A library representing all data necessary for representing a complete Pathfinder 1E character"
documentation = "https://docs.rs/tavern_pathfinder"
readme = "README.md"
#homepage = ""
repository = "https://github.com/d20-tavern/server"
license = "MPL-2.0"
license-file = "LICENSE"
keywords = ["pathfinder", "tabletop", "roleplaying", "d20", "characters"]
#categories = 
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {Version = "1.0.106", features = ["derive"]}
uuid = {Version = "0.2", features = ["serde"]}
