[package]
name = "tavern_server"
version = "0.1.0"
authors = [
    "Michael Bryant <shadow53@shadow53.com>",
    "Benjamin Croom <tauntalus@outlook.com>",
]
description = "The server side of a Pathfinder 1E character management tool"
documentation = "https://docs.rs/tavern_server"
readme = "README.md"
#homepage = ""
repository = "https://github.com/d20-tavern/server"
license = "AGPL-3.0-or-later"
license-file = "LICENSE"
keywords = ["pathfinder", "tabletop", "roleplaying", "d20", "characters"]
#categories = []
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
futures = "0.3.4"
lazy_static = "1.4.0"
nebula_form = { version = "0.1", features = ["server-warp"], git = "https://gitlab.com/BluestNight/nebula.git" }
nebula_status = { version = "0.1", features = ["server-warp"], git = "https://gitlab.com/BluestNight/nebula.git" }
rand = "0.7.3"
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.3.4", default-features = false, features = [ "chrono", "postgres", "uuid", "runtime-tokio" ] }
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
warp = "0.2"
