[package]
name = "tavern_server"
version = "0.1.0"
authors = [
    "Michael Bryant <shadow53@shadow53.com>",
    "Benjamin Croom <tauntalus@outlook.com>",
]
description = "The server side of a Pathfinder 1E character management tool"
documentation = "https://docs.rs/tavern_server"
readme = "README.md"
#homepage = ""
repository = "https://github.com/d20-tavern/server"
license-file = "LICENSE"
keywords = ["pathfinder", "tabletop", "roleplaying", "d20", "characters"]
#categories = []
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
db-test = [] # Used to conditionally enable db tests

[dependencies]
base64 = "0.12"
bytes = "0.5.4"
diesel = { version = "1.4.4", features = ["postgres", "extras", "r2d2", "uuidv07"] }
diesel-derive-enum = { version = "1", features = ["postgres"] }
diesel_migrations = { version ="1.4", features = ["postgres"] }
#futures = "0.3"
http = "0.2"
lazy_static = "1.4"
nebula_form = { version = "0.1", features = ["server-warp"] }
nebula_status = { version = "0.1", features = ["server-warp"] }
r2d2 = "0.8"
rand = "0.7.3"
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tavern_derive = { version = "0.1", path = "../tavern_derive" }
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
warp = "0.2"
